fixed header being hidden behind video

--- a/_sass/minima/home.sass
+++ b/_sass/minima/home.sass
@@ -63,7 +63,6 @@
   background-image: -o-linear-gradient(top left, #FFDE68 0%, #FF6868 100%)
   background-image: linear-gradient(to bottom right, #FFDE68 0%, #FF6868 100%)
   opacity: .6
-  z-index: 1
   +grid-media($desktop)
     top: 0
 .hero-video__container::after
